<resources>
    <string name="app_name">AplicacionBrigith</string>

    <string name="des">Artic Monkeys - Do I wanna know?</string>
    <string name="des2">Artic Monkeys - 505</string>
    <string name="des3">The Neighbourhood - Sweater Weather </string>
    <string name="des4">The Neighbourhood - Daddy Issues</string>
    <string name="des5">Chase Athlantic - Friends</string>
    <string name="des6">Chase Athlantic -  Swim</string>
</resources>