<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="MUSICA INDIE" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="585dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/articUno"
                                android:layout_width="89dp"
                                android:layout_height="82dp"
                                app:srcCompat="@drawable/artic"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/txtArticUno"
                                android:layout_width="wrap_content"
                                android:layout_height="17dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/des" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/articDos"
                                android:layout_width="89dp"
                                android:layout_height="82dp"
                                app:srcCompat="@drawable/artic"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/txtArticDos"
                                android:layout_width="wrap_content"
                                android:layout_height="17dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/des2" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/the"
                                android:layout_width="89dp"
                                android:layout_height="82dp"
                                app:srcCompat="@drawable/the"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/txtTheUno"
                                android:layout_width="wrap_content"
                                android:layout_height="17dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/des3" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/the2"
                                android:layout_width="89dp"
                                android:layout_height="82dp"
                                app:srcCompat="@drawable/the"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/txtThe2"
                                android:layout_width="wrap_content"
                                android:layout_height="17dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/des4" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/chaseUno"
                                android:layout_width="89dp"
                                android:layout_height="82dp"
                                app:srcCompat="@drawable/chase"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/txtChaseUno"
                                android:layout_width="wrap_content"
                                android:layout_height="17dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/des5" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="185dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/chaseDos"
                                android:layout_width="89dp"
                                android:layout_height="82dp"
                                app:srcCompat="@drawable/chase"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/txtChaseDos"
                                android:layout_width="wrap_content"
                                android:layout_height="17dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/des6" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>